objects/order__c.object
<CustomObject>
    <fields>
        <fullName>address__c</fullName>
        <label>address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customer_name__c</fullName>
        <label>customer name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>date_of_order__c</fullName>
        <label>date of order</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>gst__c</fullName>
        <displayFormat>G-{0000}</displayFormat>
        <label>GST INN</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <label>phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>productt__c</fullName>
        <label>productt</label>
        <referenceTo>productt__c</referenceTo>
        <relationshipLabel>orders</relationshipLabel>
        <relationshipName>orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>quantity__c</fullName>
        <label>quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ordered</fullName>
                </value>
                <value>
                    <fullName>dispatched</fullName>
                </value>
                <value>
                    <fullName>delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>total_price__c</fullName>
        <formula>productt__r.cost__c  *  quantity__c  * 1.18</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>total price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>O-{0000}</displayFormat>
        <label>order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>